# wasm-module-experiments

./: Cargo.toml  README.md  build.sh
asmscript/: package-lock.json  package.json
asmscript/assembly/: index.ts  tsconfig.json
loader/: Cargo.toml
loader/src/: fluff.rs  main.rs
module/: Cargo.toml
module/src/: main.rs
mosaic-plugin/: Cargo.toml
mosaic-plugin/src/: lib.rs
src/: main.rs
wapm_packages/.bin/: cowsay  cowthink
