[package]
name = "loader"
version = "0.1.0"
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition = "2018"

[dependencies]
wasmer = "1.0.0-alpha4"
wasmer-compiler-singlepass = "1.0.0-alpha4"
wasmer-engine-jit = "1.0.0-alpha4"
wasmer-wasi = "1.0.0-alpha4"
typetag = "0.1"
serde = { version = "1.0", features = ["derive"] }
tui = { version = "*", features = ["crossterm"] }
crossterm = "*"