[package]
name = "loader"
version = "0.1.0"
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition = "2018"

[dependencies]
wasmer = { git = "https://github.com/TheLostLambda/wasmer.git" }
wasmer-compiler-singlepass = { git = "https://github.com/TheLostLambda/wasmer.git" }
wasmer-engine-jit = { git = "https://github.com/TheLostLambda/wasmer.git" }
wasmer-wasi = { git = "https://github.com/TheLostLambda/wasmer.git" }
typetag = "0.1"
serde = { version = "1.0", features = ["derive"] }
tui = { version = "*", features = ["crossterm"] }
crossterm = { version = "*", features = ["serde"] }
serde_json = "*"