[package]
name = "loader"
version = "0.1.0"
authors = ["Brooks J Rady <b.j.rady@gmail.com>"]
edition = "2018"

[dependencies]
wasmer = "1.0.0-rc"
wasmer-wasi = "1.0.0-rc"
typetag = "0.1.6"
serde = { version = "1.0.118", features = ["derive"] }
tui = { version = "0.13.0", features = ["crossterm"] }
crossterm = { version = "0.18.2", features = ["serde"] }
serde_json = "1.0.60"
